--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_individual, neighbors, number = None):\n",
-    "    number = number or len(neighbors)\n",
+    "    number = number or len(neighbors)-1\n",
     "    neighbor_distances = distance_all(selected_individual, neighbors)\n",
     "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: neighbor['distance'])\n",
     "    return sorted_neighbors[:number]"
