--- a/index.ipynb
+++ b/index.ipynb
@@ -242,23 +242,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'name': 'Fred', 'x': 5, 'y': 8, 'distance': 1.0},\n",
-       " {'name': 'Steven', 'x': 3, 'y': 6, 'distance': 2.23606797749979}]"
+       " {'name': 'Steven', 'x': 3, 'y': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'x': 5, 'y': 4, 'distance': 4.123105625617661},\n",
+       " {'name': 'Suzie', 'x': 1, 'y': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Edgar', 'x': 6, 'y': 13, 'distance': 5.385164807134504}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nearest_neighbors(bob, neighbors, 2)"
+    "nearest_neighbors(bob, neighbors)"
    ]
   },
   {
