Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,12 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_individual, neighbors, number = None):\n",
-    "    number = number or len(neighbors)-1\n",
+    "    number = number or len(neighbors)\n",
     "    neighbor_distances = distance_all(selected_individual, neighbors)\n",
     "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: neighbor['distance'])\n",
     "    return sorted_neighbors[:number]"
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        " {'name': 'Edgar', 'x': 6, 'y': 13, 'distance': 5.385164807134504}]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        " {'name': 'Edgar', 'x': 6, 'y': 13, 'distance': 5.385164807134504}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
